--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <link rel="stylesheet" href="reset.css" />
-        <title>React App</title>
+        <title>원티드 - 나답게 일하고 즐겁게 성장하도록</title>
     </head>
-    <body>
+    <body style="margin: 0">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
